# Trabajo-Fin-de-Grado

./: .gitignore  README.md  pyproject.toml
TFG_Chollos/: IAE_Presentacion.pptx  Presentacion_Defensa_TFG.pptx  README.txt  TFG.qmd  requirements.txt  setup.py  utils.py
TFG_Chollos/App/: _feature_engineering.py  _predictor.py  _scraper_app.py  graficos_analisis.py  main.py
TFG_Chollos/App/pages/: Busqueda.py
TFG_Chollos/App_Cloud/: _feature_engineering.py  _predictor.py  _scraper_app.py  graficos_analisis.py  main.py  run.py
TFG_Chollos/App_Cloud/pages/: Busqueda.py
TFG_Chollos/Cleaning/: Analizador.ipynb  Tester.ipynb  encoding.py  post_analisis.py  preprocessing.py
TFG_Chollos/Graficos/: Grafico_Alojamientos_Andalucia.py  Graficos.py  __init__.py  correlacion.R  preview_datasets.py
TFG_Chollos/Modelizacion/: Modelizacion.py  categorizacion.py  podar_bosque_aleatorio.py  transformaciones.py
TFG_Chollos/Scraping/: Generador_urls_generales.py  Scrp_caracteristicas_estancias.py  Scrp_estancias_provincias.py  __init__.py  obtener_coordenadas_centros.py  patch_room_size.py
TFG_Chollos/data/models/: boosting_reg.pkl  columnas_modelo.pkl  le_localidad.pkl  le_provincia.pkl  regresion_lineal_reg.pkl
TFG_Chollos/data/processed/final/: db_final_Almería.parquet  db_final_Cádiz.parquet  db_final_Córdoba.parquet  db_final_Granada.parquet  db_final_Huelva.parquet  db_final_Jaén.parquet  db_final_Sevilla.parquet
TFG_Chollos/data/processed/modelizacion/: db_final_codificada_Almería.parquet  db_final_codificada_Cádiz.parquet  db_final_codificada_Córdoba.parquet  (+5 more)
(+24 files in other folders)
