[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "TFG"
version = "0.1.0"
description = "Sistema de detección de chollos en alojamientos de Andalucía mediante scraping, preprocesamiento y modelos ML, con interfaz web en Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "joblib>=1.4.0",
    "lxml>=6.0.2",
    "matplotlib>=3.9.0",
    "nbformat>=4.2.0",
    "numpy>=2.0.0",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "plotly>=6.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
    "setuptools>=82.0.1",
    "streamlit>=1.35",
    "webdriver-manager>=4.0.2",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
r = ["rpy2>=3.5.0"]
